# EcoSysLab-Archived

./: ...evefoldermeta  .codedocs  Build Instructions.docx  CMakeLists.txt  CMakeSettings.json  README.md
Resources/: ...evefoldermeta  Default.evescene  Default.evescene.evefilemeta  Deploy instruction.docx  Deploy instructions.docx
Resources/EcoSysLabProject/: ...evefoldermeta  AppleTree.evefoldermeta  BranchSurface.evefoldermeta  Broadleaf.evefoldermeta  Climate.cd.evefilemeta  Combine.evefoldermeta  Coniferous.evefoldermeta  Default.evescene  Default.evescene.evefilemeta  Digital Forestry.evefoldermeta  ForestPatch.fp  HeightFields.evefoldermeta  JoeScan.evefoldermeta  Models.evefoldermeta  New ProceduralNoise2D.noise2D  New ProceduralNoise2D.noise2D.evefilemeta  Pine.jpg.evefilemeta  PlayGround.evescene  PlayGround.evescene.evefilemeta  RealForest.evefoldermeta  SoilLayers.evefoldermeta  Soils.evefoldermeta  SpeedTree.evefoldermeta  SpeedTree_FBX.evefoldermeta  SpeedTree_OBJ.evefoldermeta  Temporary Mesh.eveprefab  Temporary Mesh.eveprefab.evefilemeta  TreeDescriptors.evefoldermeta  TreeStructor.evefoldermeta  Trunk.evefoldermeta  Willow.jpg.evefilemeta  test.eveproj  uv.png.evefilemeta
Resources/EcoSysLabProject/AppleTree/: SpecialApple.tree  SpecialApple.tree.evefilemeta  SpecialAppleFoliage.foliage  SpecialAppleFoliage.foliage.evefilemeta  SpecialShoot.shoot.evefilemeta
Resources/EcoSysLabProject/BranchSurface/: Bumpy.bs.evefilemeta
Resources/EcoSysLabProject/Broadleaf/: Asia_ChineseScholar.tree.evefilemeta  Asia_WhiteBirch.tree.evefilemeta  Australia_Eucalyptus.tree.evefilemeta  Broadleaf.forestpatch.evefilemeta  Corkscrew.tree.evefilemeta  Poplar.tree.evefilemeta  USA_BlackWalnut.tree.evefilemeta
Resources/EcoSysLabProject/Combine/: Asia_ChineseScholar.tree.evefilemeta  Bosai.tree  Bosai.tree.evefilemeta
Resources/EcoSysLabProject/Coniferous/: Coniferous.forestpatch.evefilemeta  Germany_Fir.tree.evefilemeta  USA_Pine.tree.evefilemeta
Resources/EcoSysLabProject/Digital Forestry/: 4x4.fp  4x4.fp.evefilemeta  Asia_ChineseScholar.forestpatch  Asia_WhiteBirch.forestpatch  Asia_WhiteBirch.forestpatch.evefilemeta  BranchShape.evefoldermeta  ForestPatch.evefoldermeta  Forestry Base.tree  Forestry Base.tree.evefilemeta  Forestry.sdg.evefilemeta  Forestry.shoot  Forestry.shoot.evefilemeta  Forestry.td  Forestry.tree  Forestry.tree.evefilemeta  ForestryLow.sdg  ForestryLow.sdg.evefilemeta  ForestryLow.td  ForestryLow.td.evefilemeta  ForestryLow.tdg  ForestryLow.tdg.evefilemeta  ForestryShoot.shoot  (+13 more)
Resources/Illustrations/: Algorithm.pptx
Resources/Papers/: ICTree.txt
Resources/SorghumProject/: Default.evescene  Default.evescene.evefilemeta  Dirt.eveprefab.evefilemeta  Documents.evefoldermeta  Env.eveprefab.evefilemeta  Images.evefoldermeta  New GeneralDataCapture.gdc  New GeneralDataCapture.gdc.evefilemeta  New PointCloudCapture.pcc  New PointCloudCapture.pcc.evefilemeta  New ProceduralSorghum (1).proceduralsorghum  New ProceduralSorghum (1).proceduralsorghum.evefilemeta  New ProceduralSorghum.proceduralsorghum  New ProceduralSorghum.proceduralsorghum.evefilemeta  Season12.evefoldermeta  Skeleton.sorghumstategenerator  Skeleton.sorghumstategenerator.evefilemeta  SorghumDescriptor.evefoldermeta  SorghumGrowth.evefoldermeta  VoxelPlants.evefoldermeta  Young.sorghumstategenerator.evefilemeta  ground.png.evefilemeta  temp.eveproj  top_dirt.png.evefilemeta  wall.png.evefilemeta
enc_temp_folder/30b79e41e64313b13e135167a1244535/: DatasetGenerator.cpp
enc_temp_folder/4c1935356413d7b4cbc0e83af5a8/: TreePointCloud.hpp
enc_temp_folder/c1d0748b4386dcaecc7ccf18fb6ff6/: PipeModelParameters.hpp
include/EcoSysLab/: Climate.hpp  EcoSysLabLayer.hpp  PlantStructure.hpp  Soil.hpp  Tree.hpp  TreeVisualizationLayer.hpp  Trees.hpp
include/lib/: Climate.hpp  EcoSysLab-pch.hpp  EcoSysLabLayer.hpp  Forest.hpp  ForestDescriptor.hpp  ForestPatch.hpp  JoeScanScanner.hpp  Json.hpp  LogGrader.hpp  ShootDescriptorGenerator.hpp  SimulationSettings.hpp  Soil.hpp  Sorghum.hpp  SorghumLayer.hpp  SpaceColonizationTree.hpp  SpatialPlantDistributionSimulator.hpp  SpatialPlantDistributionVisualizer.hpp  Tree.hpp  TreeDescriptor.hpp  TreeDescriptorGenerator.hpp  TreePipeBase.hpp  TreePipeNode.hpp
src/: build_mesh.py  capture_scene.py  generate_tree_pointcloud.py  generate_tree_pointcloud_v2.py  space_colonization_tree.py  yaml_to_data.py
src/EcoSysLab/: AutoTreeGenerationPipeline.cpp  BranchMeshGenerator.cpp  CBTFGroup.cpp  Climate.cpp  ClimateModel.cpp  Curve.cpp  DoubleCBTF.cpp  EcoSysLabLayer.cpp  HeightField.cpp  IVolume.cpp  LSystemString.cpp  LeafData.cpp  MarchingCubes.cpp  Noises.cpp  Octree.cpp  PipeModel.cpp  PipeModelBase.cpp  PipeProfile.cpp  PlantStructure.cpp  ProceduralSorghum.cpp  RadialBoundingVolume.cpp  SinglePipeProfile.cpp  Soil.cpp  SoilModel.cpp  SorghumData.cpp  SorghumField.cpp  SorghumLayer.cpp  SorghumStateGenerator.cpp  StemData.cpp  Tree.cpp  TreeGraph.cpp  TreeMeshGenerator.cpp  TreeModel.cpp  TreePointCloud.cpp  TreeStructure.cpp  TreeVisualizationLayer.cpp  TreeVisualizer.cpp  TreeVolume.cpp  Trees.cpp  VigorSink.cpp
src/app/: Application.cpp  DatasetGeneration.cpp  EcoSysLabApplication.cpp  LogGraderApplication.cpp  SorghumFactoryApplication.cpp  imgui.ini
src/lib/: BarkDescriptor.cpp  BillboardCloud.cpp  BillboardCloudBranchMode.cpp  BillboardCloudFlipbookMode.cpp  BillboardCloudFoliageMode.cpp  BillboardCloudOuterShellMode.cpp  BillboardCloudsConverter.cpp  BranchShape.cpp  CBTFGroup.cpp  CBTFImporter.cpp  Climate.cpp  ClimateModel.cpp  CubeVolume.cpp  Curve.cpp  DatasetGenerator.cpp  Delaunator2D.cpp  DoubleCBTF.cpp  EcoSysLabLayer.cpp  EnvironmentGrid.cpp  FlowerDescriptor.cpp  FoliageDescriptor.cpp  Forest.cpp  ForestDescriptor.cpp  ForestPatch.cpp  FruitDescriptor.cpp  HeightField.cpp  HexagonProfileData.cpp  IVolume.cpp  JoeScanScanner.cpp  Json.cpp  LSystemString.cpp  LeafData.cpp  LogGrader.cpp  LogWood.cpp  MarchingCubes.cpp  NodeGraph.cpp  Noises.cpp  ObjectRotator.cpp  PARSensorGroup.cpp  PanicleData.cpp  (+65 more)
src/python/: PythonBinding.cpp
(+544 files in other folders)
